@@ -945,9 +945,17 @@ ZEND_VM_HELPER_EX(zend_fetch_var_address_helper, CONST|TMP|VAR|CV, ANY, int type
 		varname = &tmp_varname;
 	}
 
-	if (opline->op2.u.EA.type == ZEND_FETCH_STATIC_MEMBER) {
+	if (opline->op2.u.EA.type == ZEND_FETCH_AUTO_GLOBAL &&
+	    CG(auto_globals_cache)[opline->op2.u.var]) {
+		retval = CG(auto_globals_cache)[opline->op2.u.var];
+	} else if (opline->op2.u.EA.type == ZEND_FETCH_STATIC_MEMBER) {
 		retval = zend_std_get_static_property(EX_T(opline->op2.u.var).class_entry, Z_TYPE_P(varname), Z_UNIVAL_P(varname), Z_UNILEN_P(varname), 0 TSRMLS_CC);
 	} else {
+		zend_auto_global *auto_global = NULL;
+
+		if (opline->op2.u.EA.type == ZEND_FETCH_AUTO_GLOBAL) {
+			zend_u_is_auto_global_ex(Z_TYPE_P(varname), Z_UNIVAL_P(varname), Z_UNILEN_P(varname), 1, &auto_global TSRMLS_CC);
+		}
 		target_symbol_table = zend_get_target_symbol_table(opline, EX(Ts), type, varname TSRMLS_CC);
 /*
 		if (!target_symbol_table) {
@@ -977,6 +985,11 @@ ZEND_VM_HELPER_EX(zend_fetch_var_address_helper, CONST|TMP|VAR|CV, ANY, int type
 			}
 		}
 		switch (opline->op2.u.EA.type) {
+			case ZEND_FETCH_AUTO_GLOBAL:
+				if (auto_global && (!auto_global->armed || !auto_global->runtime)) {
+					CG(auto_globals_cache)[opline->op2.u.var] = retval;
+				}
+				/* break missing intentionally */
 			case ZEND_FETCH_GLOBAL:
 				if (OP1_TYPE != IS_TMP_VAR) {
 					FREE_OP1();
@@ -2987,7 +3000,11 @@ ZEND_VM_HANDLER(74, ZEND_UNSET_VAR, CONST|TMP|VAR|CV, ANY)
 		if (zend_u_hash_del(target_symbol_table, Z_TYPE_P(varname), Z_UNIVAL_P(varname), Z_UNILEN_P(varname)+1) == SUCCESS) {
 			zend_execute_data *ex = EXECUTE_DATA;
 			ulong hash_value = zend_u_inline_hash_func(Z_TYPE_P(varname), Z_UNIVAL_P(varname), Z_UNILEN_P(varname)+1);
+			zend_auto_global *auto_global;
 
+			if (zend_u_hash_quick_find(CG(auto_globals), Z_TYPE_P(varname), Z_UNIVAL_P(varname), Z_UNILEN_P(varname)+1, hash_value, (void**)&auto_global) == SUCCESS) {
+				CG(auto_globals_cache)[auto_global->index] = NULL;
+			}
 			do {
 				int i;
 
