@@ -42,6 +42,7 @@ PHP                                                                        NEWS
     mhash_keygen.
 
 
+- Added runtime JIT auto-globals fetching and caching (Dmitry, Sara)
 - Added "jump label" operator (limited "goto"). (Dmitry, Sara)
 - Added E_STRICT to E_ALL. (Dmitry)
 - Added an optional parameter to strstr() and stristr() for retrieval of either
